--- a/index.html
+++ b/index.html
@@ -124,8 +124,12 @@
         /* --- Screenshot Upload --- */
         .screenshot-container {
             display: flex;
+            flex-direction: column;
             gap: 20px;
             margin-bottom: 25px;
+        }
+        @media (min-width: 500px) {
+            .screenshot-container { flex-direction: row; }
         }
         .screenshot-upload {
             flex: 1;
@@ -336,10 +340,10 @@
 </div>
 
 <script>
-    // --- UPDATED SCRIPT URL ---
+    // --- SCRIPT URL ---
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyihdt2Qkint5NpPGojNoynU2cxnPOtMMrp2nXuWKo4efa40rhKUfTjfwvL_ZYMc1mn/exec";
 
-    // --- UPDATED UI STRINGS AND GRADING ---
+    // --- UI STRINGS AND GRADING ---
     const uiStrings = {
         en: {
             welcomeTitle: "Marketing Plan",
@@ -371,7 +375,7 @@
             reviewTitle: "Answer Review",
             backToResultsBtn: "Back to Results",
             notifyName: "Please enter your name.",
-            notifyMentor: "Please enter mentor's name correctly (with Sir/Mam).",
+            notifyMentor: "Please enter mentor's name correctly (e.g., Jane Doe Sir/Mam).",
             notifySS1: "Please upload the start of class screenshot.",
             notifySS2: "Please upload the end of class screenshot.",
             notifyDuplicateSS: "Please upload two different screenshots.",
@@ -409,7 +413,7 @@
             reviewTitle: "উত্তর পর্যালোচনা",
             backToResultsBtn: "ফলাফলে ফিরে যান",
             notifyName: "অনুগ্রহ করে আপনার নাম লিখুন।",
-            notifyMentor: "মেন্টরের নাম সঠিকভাবে লিখুন (স্যার/ম্যাম সহ)।",
+            notifyMentor: "মেন্টরের নাম সঠিকভাবে লিখুন (যেমন, জেন ডো স্যার/ম্যাম)।",
             notifySS1: "ক্লাসের শুরুর স্ক্রিনশট আপলোড করুন।",
             notifySS2: "ক্লাসের শেষের স্ক্রিনশট আপলোড করুন।",
             notifyDuplicateSS: "অনুগ্রহ করে দুটি ভিন্ন স্ক্রিনশট আপলোড করুন।",
@@ -419,7 +423,7 @@
         }
     };
 
-    // --- UPDATED QUIZ DATA ---
+    // --- QUIZ DATA ---
     const quizData = [
         { type: 'mcq', question: { en: "What are 3P's of Forever Living?", bn: "ফরএভার লিভিং-এর ৩টি 'P' কী কী?" }, options: { en: ['Plant, Production, Panel', 'Profile, Plan, Product', 'Product, Plant, Plan', 'Promote, Partner, Profit'], bn: ['প্ল্যান্ট, প্রোডাকশন, প্যানেল', 'প্রোফাইল, প্ল্যান, প্রোডাক্ট', 'প্রোডাক্ট, প্ল্যান্ট, প্ল্যান', 'প্রমোট, পার্টনার, প্রফিট'] }, answerKey: 'Profile, Plan, Product' },
         { type: 'mcq', question: { en: "What type of business FLP provides?", bn: "FLP কোন ধরনের ব্যবসা প্রদান করে?" }, options: { en: ['Legacy Business', 'Traditional Business', 'Marketplace Business', 'Freelancing Business'], bn: ['লিগ্যাসি বিজনেস', 'প্রচলিত ব্যবসা', 'মার্কেটপ্লেস ব্যবসা', 'ফ্রিল্যান্সিং ব্যবসা'] }, answerKey: 'Legacy Business' },
@@ -492,12 +496,11 @@
         if (!screens.review.classList.contains('hidden')) buildReviewScreen();
         if (!screens.results.classList.contains('hidden')) {
             let score = 0;
-            const totalMcq = quizData.filter(q => q.type === 'mcq').length;
+            const totalMcq = quizData.length;
             userAnswers.forEach((answer, index) => {
-                if (quizData[index].type === 'mcq' && answer === quizData[index].answerKey) score++;
+                if (answer === quizData[index].answerKey) score++;
             });
             const percentage = totalMcq > 0 ? Math.round((score / totalMcq) * 100) : 0;
-
             document.getElementById('result-heading').innerText = t.getResultHeading(percentage, userName);
             document.getElementById('score-details').innerText = t.scoreDetails(score, totalMcq);
         }
@@ -518,69 +521,69 @@
         document.getElementById('progress-text').innerText = t.progressText(currentQuestionIndex + 1, quizData.length);
         document.getElementById('question-text').innerText = currentQuestion.question[currentLanguage];
 
-        if (currentQuestion.type === 'mcq') {
-            const optionsList = document.createElement('ul');
-            optionsList.className = 'options-list';
-            currentQuestion.options[currentLanguage].forEach((option, index) => {
-                const li = document.createElement('li');
-                li.className = 'neumorphic-outset';
-                const textSpan = document.createElement('span');
-                textSpan.innerText = option;
-                li.appendChild(textSpan);
-                li.dataset.answerKey = currentQuestion.options.en[index];
-                li.addEventListener('click', selectOption);
-                optionsList.appendChild(li);
-            });
-            optionsContainer.appendChild(optionsList);
-            if (userAnswers[currentQuestionIndex]) {
-                showInstantFeedback();
-            }
+        const optionsList = document.createElement('ul');
+        optionsList.className = 'options-list';
+        currentQuestion.options[currentLanguage].forEach((option, index) => {
+            const li = document.createElement('li');
+            li.className = 'neumorphic-outset';
+            const textSpan = document.createElement('span');
+            textSpan.innerText = option;
+            li.appendChild(textSpan);
+            // Use the English option as the stable key for the answer
+            li.dataset.answerKey = currentQuestion.options.en[index];
+            li.addEventListener('click', selectOption);
+            optionsList.appendChild(li);
+        });
+        optionsContainer.appendChild(optionsList);
+
+        if (userAnswers[currentQuestionIndex]) {
+            showInstantFeedback();
         }
         updateNavigation();
     }
 
     function selectOption(e) {
         const selectedLi = e.target.closest('li');
-        const optionsList = selectedLi.parentElement;
-
-        if (optionsList.classList.contains('disabled')) return;
+        if (!selectedLi || selectedLi.parentElement.classList.contains('disabled')) return;
 
         userAnswers[currentQuestionIndex] = selectedLi.dataset.answerKey;
-
         showInstantFeedback();
         updateNavigation();
-
-        setTimeout(() => {
-            if (currentQuestionIndex < quizData.length - 1) {
-                handleNextButton();
-            } else {
-                showResults();
-            }
-        }, 800);
     }
 
     function showInstantFeedback() {
         const optionsList = document.querySelector('.options-list');
         if (!optionsList) return;
-        optionsList.classList.add('disabled');
+        optionsList.classList.add('disabled'); // Prevent further clicks
+
         const correctAnswerKey = quizData[currentQuestionIndex].answerKey;
+        const userAnswerKey = userAnswers[currentQuestionIndex];
 
         Array.from(optionsList.children).forEach(li => {
-            li.classList.remove('neumorphic-outset');
-            li.classList.add('selected');
-            if(li.querySelector('.feedback-icon')) li.querySelector('.feedback-icon').remove();
+            const currentOptionKey = li.dataset.answerKey;
+            if (li.querySelector('.feedback-icon')) li.querySelector('.feedback-icon').remove();
 
             const icon = document.createElement('span');
             icon.className = 'feedback-icon';
 
-            if (li.dataset.answerKey === correctAnswerKey) {
+            // Style the correct answer
+            if (currentOptionKey === correctAnswerKey) {
                 li.classList.add('correct');
                 icon.innerHTML = '✔';
                 li.appendChild(icon);
-            } else if (li.dataset.answerKey === userAnswers[currentQuestionIndex]) {
-                li.classList.add('incorrect');
-                icon.innerHTML = '✖';
-                li.appendChild(icon);
+            }
+
+            // Style the user's selected answer
+            if (currentOptionKey === userAnswerKey) {
+                li.classList.remove('neumorphic-outset');
+                li.classList.add('selected'); // Add inset shadow to the selected option
+
+                // If their choice was also incorrect, mark it
+                if (userAnswerKey !== correctAnswerKey) {
+                    li.classList.add('incorrect');
+                    icon.innerHTML = '✖';
+                    li.appendChild(icon);
+                }
             }
         });
     }
@@ -596,25 +599,16 @@
 
     function updateNavigation() {
         prevBtn.disabled = currentQuestionIndex === 0;
-
-        const currentAnswer = userAnswers[currentQuestionIndex];
-        const currentQuestion = quizData[currentQuestionIndex];
-
-        if (currentQuestion.type === 'mcq') {
-            nextBtn.disabled = !currentAnswer;
-        }
-
+        nextBtn.disabled = !userAnswers[currentQuestionIndex];
         nextBtn.innerText = uiStrings[currentLanguage][currentQuestionIndex === quizData.length - 1 ? 'resultsBtn' : 'nextBtn'];
     }
 
     function showResults() {
         switchScreen('results');
         let score = 0;
-        const totalMcq = quizData.filter(q => q.type === 'mcq').length;
+        const totalMcq = quizData.length;
         userAnswers.forEach((answer, index) => {
-            if (quizData[index].type === 'mcq' && answer === quizData[index].answerKey) {
-                score++;
-            }
+            if (answer === quizData[index].answerKey) score++;
         });
         const percentage = totalMcq > 0 ? Math.round((score / totalMcq) * 100) : 0;
 
@@ -628,9 +622,8 @@
         const circle = document.getElementById('score-progress');
         const radius = circle.r.baseVal.value;
         const circumference = 2 * Math.PI * radius;
-
         circle.style.strokeDasharray = `${circumference} ${circumference}`;
-        circle.style.strokeDashoffset = circumference; // Reset before animating
+        circle.style.strokeDashoffset = circumference;
 
         const offset = circumference - (percentage / 100) * circumference;
         setTimeout(() => { circle.style.strokeDashoffset = offset; }, 100);
@@ -648,23 +641,21 @@
             questionText.innerText = (index + 1) + '. ' + q.question[currentLanguage];
             item.appendChild(questionText);
 
-            if (q.type === 'mcq') {
-                const optionsUl = document.createElement('ul');
-                optionsUl.className = 'options-list';
-                q.options[currentLanguage].forEach((opt, optIndex) => {
-                    const li = document.createElement('li');
-                    li.className = 'neumorphic-outset';
-                    const englishOptKey = q.options.en[optIndex];
-                    li.innerText = opt;
-                    if (englishOptKey === q.answerKey) li.classList.add('correct-answer');
-                    if (englishOptKey === userAnswers[index]) {
-                        li.classList.add('user-answer');
-                        if (userAnswers[index] !== q.answerKey) li.classList.add('incorrect');
-                    }
-                    optionsUl.appendChild(li);
-                });
-                item.appendChild(optionsUl);
-            }
+            const optionsUl = document.createElement('ul');
+            optionsUl.className = 'options-list';
+            q.options[currentLanguage].forEach((opt, optIndex) => {
+                const li = document.createElement('li');
+                li.className = 'neumorphic-outset';
+                const englishOptKey = q.options.en[optIndex];
+                li.innerText = opt;
+                if (englishOptKey === q.answerKey) li.classList.add('correct-answer');
+                if (englishOptKey === userAnswers[index]) {
+                    li.classList.add('user-answer');
+                    if (userAnswers[index] !== q.answerKey) li.classList.add('incorrect');
+                }
+                optionsUl.appendChild(li);
+            });
+            item.appendChild(optionsUl);
             reviewList.appendChild(item);
         });
     }
@@ -677,9 +668,11 @@
     }
 
     function triggerShake(element) {
-        const parentDiv = element.closest('.input-group') ? element.parentElement : element;
-        parentDiv.classList.add('invalid-field');
-        setTimeout(() => parentDiv.classList.remove('invalid-field'), 500);
+        const parentDiv = element.closest('.neumorphic-inset, .neumorphic-outset');
+        if (parentDiv) {
+            parentDiv.classList.add('invalid-field');
+            setTimeout(() => parentDiv.classList.remove('invalid-field'), 500);
+        }
     }
 
     function validateWelcomeScreen() {
@@ -688,13 +681,11 @@
             showNotification(t.notifyName); triggerShake(userNameInput); return false;
         }
 
+        // Use a more robust regex to validate mentor name format (e.g., "John Doe Sir")
         const mentorNameVal = mentorNameInput.value.trim();
-        const mentorNameLower = mentorNameVal.toLowerCase();
-        const validSuffixes = ['sir', 'mam', 'স্যার', 'ম্যাম'];
-        const hasValidSuffix = validSuffixes.some(suffix => mentorNameLower.endsWith(` ${suffix}`) || mentorNameLower.endsWith(suffix));
-        const namePart = mentorNameVal.replace(/sir|mam|স্যার|ম্যাম/gi, '').trim();
-        if (namePart === '' || !hasValidSuffix) {
-            showNotification(t.notifyMentor); triggerShake(mentorNameInput); return false;
+        const mentorNameRegex = /.+(\s+(sir|mam|স্যার|ম্যাম))$/i;
+        if (!mentorNameRegex.test(mentorNameVal)) {
+             showNotification(t.notifyMentor); triggerShake(mentorNameInput); return false;
         }
 
         if (!screenshotFile1) { showNotification(t.notifySS1); triggerShake(document.getElementById('upload-label-1')); return false; }
@@ -716,7 +707,7 @@
             previewEl.src = URL.createObjectURL(file);
             previewEl.classList.add('visible');
             labelEl.innerText = uiStrings[currentLanguage].uploadSuccess;
-            labelEl.classList.remove('invalid-field');
+            triggerShake(labelEl); // Clear red shake if it was there
 
             const reader = new FileReader();
             reader.onload = function(event) {
@@ -762,11 +753,11 @@
                 if(data.result === 'success'){
                     showNotification(uiStrings[currentLanguage].submissionSuccess, true);
                 } else {
-                    throw new Error(data.error || 'Unknown error');
+                    throw new Error(data.error || 'Unknown submission error');
                 }
             })
             .catch((error) => {
-                console.error('Error:', error);
+                console.error('Submission Error:', error);
                 showNotification(uiStrings[currentLanguage].submissionError);
             })
             .finally(() => {
